tests/build/cases/widget/malformed_property_type2.rs
use zero_ui::core::widget;

#[widget($crate::test_widget)]
pub mod test_widget {
    inherit!(zero_ui::core::widget_base::base);

    properties! {
        pub foo(_) = 10;
    }
}

fn main() {}
